# LCPandoraAnalysis

./: CMakeLists.txt  ChangeLog.txt  Makefile  README.md
PandoraAnalysis/trunk/: BuildSetup.cmake  CMakeLists.txt  ChangeLog.txt  Makefile  PandoraAnalysisConfig.cmake.in
PandoraAnalysis/trunk/calibration/: ECalDigitisation_ContainedEvents.cc  HCalDigitisation_ContainedEvents.cc  HCalDigitisation_DirectionCorrectionDistribution.cc  HCalDigitisation_Ring.cc  PandoraPFACalibrate_HadronicEnergyGaussianFit.cc  PandoraPFACalibrate_HadronicScale_ChiSquareMethod.cc  PandoraPFACalibrate_HadronicScale_TotalEnergyMethod.cc  PandoraPFACalibrate_MipResponse.cc  RescaleEnergies.cc  SimCaloHitEnergyDistribution.cc
PandoraAnalysis/trunk/doc/: CalibrationPandoraAnalysisExplained.tex  Doxyfile
PandoraAnalysis/trunk/include/: AnalysePerformance.h  AnalysisHelper.h  AnalysisMCTree.h  CalibrationHelper.h  MCPfoMaker.h  MCTree.h  PandoraPFACalibrator.h  PfoAnalysis.h
PandoraAnalysis/trunk/performance/: AnalysePerformance.cc  AnalysePerformanceFull.cc
PandoraAnalysis/trunk/scripts/: PandoraAnalysis.xml  PandoraPFACalibrator.xml
PandoraAnalysis/trunk/src/: AnalysePerformance.cc  AnalysisHelper.cc  CalibrationHelper.cc  MCPfoMaker.cc  MCTree.cc  PandoraPFACalibrator.cc  PfoAnalysis.cc
PandoraAnalysis/trunk/tests/: AnalysePerformance.cc  AnalysePerformanceFull.cc  Calibrate.cc  ReclusterMonitoring.cc
calibration/: ECalDigitisation_ContainedEvents.cc  ECalDigitisation_DirectionCorrectionDistribution.cc  HCalDigitisation_ContainedEvents.cc  HCalDigitisation_DirectionCorrectionDistribution.cc  HCalDigitisation_Ring.cc  PandoraPFACalibrate_EMScale.cc  PandoraPFACalibrate_HadronicEnergyGaussianFit.cc  PandoraPFACalibrate_HadronicScale_ChiSquareMethod.cc  PandoraPFACalibrate_HadronicScale_TotalEnergyMethod.cc  PandoraPFACalibrate_MipResponse.cc  PandoraPFACalibrate_SoftwareCompensation.cc  RescaleEnergies.cc  SimCaloHitEnergyDistribution.cc
doc/: CMakeLists.txt  CalibrationPandoraAnalysisExplained.tex  ReleaseNotes.md
include/: AnalysisHelper.h  CalibrationHelper.h  MCPfoMaker.h  MCTree.h  PandoraPFACalibrator.h  PfoAnalysis.h
performance/: AnalysePerformance.cc  AnalysePerformanceFull.cc
scripts/: OriginalLanSoftwareCompensationMacro_Paper.C  PandoraAnalysis.xml  PandoraAnalysisCalibration.xml
src/: AnalysePerformance.cc  AnalysisHelper.cc  AnalysisMCTree.cc  CalibrationHelper.cc  MCPfoMaker.cc  MCTree.cc  PandoraPFACalibrator.cc  PfoAnalysis.cc
tests/: AnalysePerformance.cc  AnalysePerformanceFull.cc  Calibrate.cc  ReclusterMonitoring.cc
